--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
