--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://tanakaderoy.github.io/TMDB-search",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -28,6 +31,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "gh-pages": "^3.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~3.9.5"
   },
